2013-11-20  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c: ml_set_use_scp() -> ml_set_use_scp_full().

	* x_picture.c, x_screen.c: Minor fixes.

2013-11-19  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: -L option is added to curl.

	* mlimgloader/gdk-pixbuf.c, xlib/x_imagelib.c: Minor fixes.

2013-11-16  Araki Ken  <arakiken@users.sf.net>

	* configure.in: Don't link an external image library such as gdk-pixbuf
	  on win32gdi or framebuffer even if --with-imagelib option is specified.

2013-11-16  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: draw_string() which causes segfault by illegal
	  surrogate pairs is fixed.

	* xlib/x_font.c: https://bugzilla.novell.com/attachment.cgi?id=566444
	  (https://bugzilla.novell.com/show_bug.cgi?id=849342) is applied.

	* README.ja, man/mlterm.1: Updated.

	* ml_logs.[ch], ml_screen.h, ml_term.h, x_screen.c, x_sb_screen.c,
	  x_screen_manager.c, x_main_config.[ch], vte.c:
	  "logsize" option accepts "unlimited" which unlimits the number of
	  lines of backscroll logs.

	* mlcc/main.c: The argument of set_shortcut command isn't enclosed by "".

2013-11-10  Araki Ken  <arakiken@users.sf.net>

	* ml_pty_ssh.c: Minor fixes around processing path.

	* mlcc/main.c: Arguments of exec command are always enclosed by "".

2013-11-10  Araki Ken  <arakiken@users.sf.net>

	* ml_pty_ssh.c, ml_vt100_parser.c:
	  ml_set_use_scp() in ml_vt100_parser.c is moved to ml_pty_ssh.c
	  as ml_set_use_scp_full().

	* libptyssh/ml_pty_ssh.c: ml_pty_ssh_poll() doesn't check while scp
	  is executing.

	* kik_path.h: IS_RELATIVE_PATH() is added.

	* doc/ja/README.fb, doc/ja/README.win32, doc/en/PROTOCOL: Updated.

2013-11-06  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.c, xlib/x_display.c: XFlush() is called directly in
	  x_event_source.c, not in x_display.c.

2013-11-04  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: --im ibus:[conversion engine] is available.

2013-11-04  Araki Ken  <arakiken@users.sf.net>
