@@ -26,12 +26,14 @@ version 20131027
 
   return value     = "#" <key> "=" <value> "\x0a" | "#error" "\x0a" | "#forbidden" "\x0a"
   exec command     = paste | select_pty <dev> | full_reset | open_pty | close_pty (<dev>) |
-                     open_screen | snapshot (<file name>) (<encoding name>) | gen_proto_challenge |
-                     mlclient <prefix options> <options> | mlclientx <prefix options> <options> |
+                     open_screen | snapshot ("<file name>") ("<encoding name>") |
+                     gen_proto_challenge | mlclient "<prefix options>" "<options>" |
+                     mlclientx "<prefix options>" "<options>" |
                      search_prev <pattern> | search_next <pattern> | update_all |
-                     show_picture <file name> (WxH) (WxH+X+Y) | set_shortcut <key>=<operation>
-                     scp (local:|remote:)<src file name> (local:|remote:)<dst directory name>
-                     (<encoding name>)
+                     show_picture "<file name>" "(WxH)" "(WxH+X+Y)" |
+                     set_shortcut <key>=<operation>
+                     scp "(local:|remote:)<src file name>" "(local:|remote:)<dst directory name>"
+                     "(<encoding name>)"
   set key          = encoding | fg_color | bg_color | tabsize | logsize | fontsize |
                      fade_ratio | mod_meta_key | mod_meta_mode | bel_mode | type_engine |
                      use_anti_alias | use_variable_column_width | use_combining |
