@@ -5247,93 +5247,6 @@ change_im(
 	}
 }
 
-static void
-snapshot(
-	x_screen_t *  screen ,
-	ml_char_encoding_t  encoding ,
-	char *  file_name
-	)
-{
-	char *  path ;
-	int  beg ;
-	int  end ;
-	ml_char_t *  buf ;
-	u_int  num ;
-	FILE *  file ;
-	u_char  conv_buf[512] ;
-	mkf_conv_t *  conv ;
-
-	if( ( path = alloca( 7 + strlen( file_name) + 4 + 1)) == NULL)
-	{
-		return ;
-	}
-	sprintf( path , "mlterm/%s.snp" , file_name) ;
-
-	if( ( path = kik_get_user_rc_path( path)) == NULL)
-	{
-		return ;
-	}
-
-	file = fopen( path , "w") ;
-	free( path) ;
-	if( ! file)
-	{
-	#ifdef  DEBUG
-		kik_debug_printf( KIK_DEBUG_TAG " Failed to open %s\n" , file_name) ;
-	#endif
-
-		return ;
-	}
-
-	beg = - ml_term_get_num_of_logged_lines( screen->term) ;
-	end = ml_term_get_rows( screen->term) ;
-
-	num = ml_term_get_region_size( screen->term , 0 , beg , 0 , end) ;
-
-	if( ( buf = ml_str_alloca( num)) == NULL)
-	{
-		fclose( file) ;
-
-		return ;
-	}
-
-	ml_term_copy_region( screen->term , buf , num , 0 , beg , 0 , end) ;
-
-	(*screen->ml_str_parser->init)( screen->ml_str_parser) ;
-	ml_str_parser_set_str( screen->ml_str_parser , buf , num) ;
-
-	if( encoding == ML_UNKNOWN_ENCODING || ( conv = ml_conv_new( encoding)) == NULL)
-	{
-		while( ! screen->ml_str_parser->is_eos)
-		{
-			if( ( num = ml_term_convert_to( screen->term , conv_buf ,
-					sizeof( conv_buf) , screen->ml_str_parser)) == 0)
-			{
-				break ;
-			}
-
-			fwrite( conv_buf , num , 1 , file) ;
-		}
-	}
-	else
-	{
-		while( ! screen->ml_str_parser->is_eos)
-		{
-			if( ( num = (*conv->convert)( conv , conv_buf , sizeof( conv_buf) ,
-					screen->ml_str_parser)) == 0)
-			{
-				break ;
-			}
-
-			fwrite( conv_buf , num , 1 , file) ;
-		}
-
-		(*conv->delete)( conv) ;
-	}
-
-	fclose( file) ;
-}
-
 
 /*
  * Callbacks of x_config_event_listener_t events.
@@ -8249,52 +8162,6 @@ x_screen_exec_cmd(
 		{
 			(*screen->system_listener->open_screen)(
 				screen->system_listener->self , screen) ;
-		}
-	}
-	else if( strcmp( cmd , "snapshot") == 0)
-	{
-		char **  argv ;
-		int  argc ;
-		ml_char_encoding_t  encoding ;
-		char *  file ;
-
-		if( arg)
-		{
-			argv = kik_arg_str_to_array( &argc , arg) ;
-		}
-		else
-		{
-			argc = 0 ;
-			argv = NULL ;
-		}
-
-		if( argc >= 2)
-		{
-			encoding = ml_get_char_encoding( argv[1]) ;
-		}
-		else
-		{
-			encoding = ML_UNKNOWN_ENCODING ;
-		}
-
-		if( argc >= 1)
-		{
-			file = argv[0] ;
-		}
-		else
-		{
-			/* skip /dev/ */
-			file = ml_term_get_slave_name( screen->term) + 5 ;
-		}
-
-		if( strstr( file , ".."))
-		{
-			/* insecure file name */
-			kik_msg_printf( "%s is insecure file name.\n" , file) ;
-		}
-		else
-		{
-			snapshot( screen , encoding , file) ;
 		}
 	}
 	else if( strncmp( cmd , "search_" , 7) == 0)
