@@ -1,3 +1,11 @@
+2013-11-22  Araki Ken  <arakiken@users.sf.net>
+
+	* x_screen.c, ml_vt100_parser.c: "snapshot" is moved from x_screen.c
+	  to ml_vt100_parser.c.
+
+	* mlcc/main.c: Arguments of commands except mlclient, snapshot,
+	  show_picture and scp aren't enclosed by "".
+
 2013-11-20  Araki Ken  <arakiken@users.sf.net>
 
 	* MLTermPty.c: ml_set_use_scp() -> ml_set_use_scp_full().
